pokerOnline/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poker-api
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
